force-app/main/default/objects/Account/fields/Calificaci_n_de_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Calificaci_n_de_Cliente__c</fullName>
    <label>Calificación de Cliente</label>
    <length>50</length>
    <type>Text</type>
</CustomField>