force-app/main/default/objects/Account/fields/Check_Fecha_Aniversario__c.field-meta.xml
<CustomField>
    <fullName>Check_Fecha_Aniversario__c</fullName>
    <formula>TODAY() =   Fecha_Prueba__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Fecha Aniversario</label>
    <type>Checkbox</type>
</CustomField>