force-app/main/default/objects/Account/fields/Conteo_Hojas_de_C_lculo__c.field-meta.xml
<CustomField>
    <fullName>Conteo_Hojas_de_C_lculo__c</fullName>
    <label>Conteo Hojas de Cálculo</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>