force-app/main/default/objects/Account/fields/Cu_l__c.field-meta.xml
<CustomField>
    <fullName>Cu_l__c</fullName>
    <label>Cuál?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>