force-app/main/default/objects/Account/fields/Estado_de_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_Cuenta__c</fullName>
    <label>Estado de Cuenta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Por Validar</fullName>
                <default>true</default>
                <label>Por Validar</label>
            </value>
            <value>
                <fullName>Activa</fullName>
            </value>
            <value>
                <fullName>Inactiva</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>