force-app/main/default/objects/Account/fields/Fecha_Prueba__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Prueba__c</fullName>
    <label>Fecha Prueba</label>
    <type>Date</type>
</CustomField>