force-app/main/default/objects/Account/fields/Gerente_Encargado__c.field-meta.xml
<CustomField>
    <fullName>Gerente_Encargado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gerente Encargado</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Profile.Id</field>
            <operation>equals</operation>
            <value>00eHn000001uBdB</value>
        </filterItems>
        <filterItems>
            <field>User.ProfileId</field>
            <operation>equals</operation>
            <value>00eHn000002Jo2l</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>