force-app/main/default/objects/Account/fields/Proximo_Aniversario_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Proximo_Aniversario_Cuenta__c</fullName>
    <description>Va a actualizarse al otro día, por lo tanto es necesario verificar.</description>
    <formula>IF(
  TODAY() &gt; DATE(YEAR(TODAY()), MONTH(DATEVALUE( CreatedDate )), DAY(DATEVALUE( CreatedDate ))),
  DATE(YEAR(TODAY()) + 1, MONTH(DATEVALUE( CreatedDate )), DAY(DATEVALUE( CreatedDate ))),
  IF(
    TODAY() = DATE(YEAR(TODAY()), MONTH(DATEVALUE( CreatedDate )), DAY(DATEVALUE( CreatedDate ))),
    DATEVALUE( CreatedDate ),
    DATE(YEAR(TODAY()) + 1, MONTH(DATEVALUE( CreatedDate )), DAY(DATEVALUE( CreatedDate )))
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Próximo Aniversario de Cuenta</label>
    <type>Date</type>
</CustomField>