force-app/main/default/objects/Account/validationRules/Validacion_Activa_Ubicacion.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacion_Activa_Ubicacion</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISPICKVAL(  Departamento_Sede__c , &quot;&quot;),  ISPICKVAL( Municipio_Sede__c , &quot;&quot;) ),ISPICKVAL(  Estado_de_Cuenta__c , &quot;Activa&quot;))</errorConditionFormula>
    <errorMessage>Por favor confirme que todos los campos existentes en la sección &quot;Ubicación&quot; se encuentran diligenciados, de lo contrario no será posible continuar con el proceso.</errorMessage>
</ValidationRule>