force-app/main/default/objects/Account/validationRules/Validacion_Calificacion.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacion_Calificacion</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(  ISBLANK(Calificaci_n_de_Cliente__c),  Calificaci_n_de_Cliente__c &lt;&gt;&quot;Recomendado&quot; ), ISPICKVAL( Estado_de_Cuenta__c , &quot;Activa&quot;) )</errorConditionFormula>
    <errorDisplayField>Calificaci_n_de_Cliente__c</errorDisplayField>
    <errorMessage>El Cliente debe tener una calificación Recomendada para poder activar la cuenta.</errorMessage>
</ValidationRule>