force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>NIT__c</columns>
    <columns>Estado_de_Cuenta__c</columns>
    <columns>Tipo_de_Cliente__c</columns>
    <columns>Tipo_de_Cuenta__c</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <filterScope>Mine</filterScope>
    <label>Mis Cuentas</label>
</ListView>